--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-//ボタンのデザイン
+/*ボタンのデザイン*/
 .submit_buttun {
     padding: 0.5em 1em;
     text-decoration:none;
@@ -18,7 +18,7 @@
     background: -moz-linear-gradient(-90deg, #81a8cb, #4477a1);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
-//ボタンの押印時に稼働
+/*ボタンの押印時に稼働*/
 .submit_buttun:hover{
     color:#fff;
     background-color:#49a9d4;
@@ -30,11 +30,11 @@
     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
 }
-//ボタンが有効時に稼働
+/*ボタンが有効時に稼働*/
 .submit_buttun:active{
 	background: #4477a1;
 }
-//ボタン配置
+/*ボタン配置*/
 .submit_btn_box{
 	margin: 20px;
 	text-align: center;
@@ -208,7 +208,7 @@ h1
 	border-top:2px solid blue;
 	border-bottom:2px solid blue;
 	text-align:center;
-	margin:0;
+	margin:10px;
 	width:90%;
 	margin-left:50px;
 }
