--- a/WebContent/css/buttun.css
+++ b/WebContent/css/buttun.css
@@ -12,7 +12,7 @@
 	margin-left : 6px;
     font-size:10px;
     text-align:center;
-    color:#fff;
+    color:blue;
     box-shadow:2px 2px #1a6ea0;
     background: #4b7ea1;
     background: -webkit-gradient(linear, left top, left bottom, from(#81a8cb), to(#4477a1) );
@@ -21,8 +21,8 @@
 }
 //ボタンの押印時に稼働
 .submit_buttun:hover{
-    color:#fff;
-    background-color:#49a9d4;
+    color:blue;
+    background-color:blue;
     box-shadow:2px 2px #1a6ea0;
     cursor: pointer;
     opacity:0.5;
@@ -33,10 +33,10 @@
 }
 //ボタンが有効時に稼働
 .submit_buttun:active{
-	background: #4477a1;
+	background: blue;
 }
 //ボタン配置
-.submit_btn_box{
+.submit_buttun_box{
 	margin: 20px;
 	text-align: center;
 	clear: both;
