--- a/WebContent/css/buttun.css
+++ b/WebContent/css/buttun.css
@@ -2,7 +2,7 @@
 
 
 //ボタンのデザイン
-.buttun {
+.button {
     padding: 0.5em 1em;
     text-decoration:none;
     border-radius:100px;
@@ -20,7 +20,7 @@
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
 //ボタンの押印時に稼働
-.buttun:hover{
+.button:hover{
     color:blue;
     background-color:blue;
     box-shadow:2px 2px #1a6ea0;
@@ -32,11 +32,11 @@
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
 }
 //ボタンが有効時に稼働
-.buttun:active{
+.button:active{
 	background: blue;
 }
 //ボタン配置
-.buttun_box{
+.button_box{
 	margin: 20px;
 	text-align: center;
 	clear: both;
