--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-/*ボタンのデザイン*/
-.submit_buttun {
+
+//ボタンのデザイン
+.button {
     padding: 0.5em 1em;
     text-decoration:none;
     border-radius:100px;
@@ -11,17 +12,17 @@
 	margin-left : 6px;
     font-size:10px;
     text-align:center;
-    color:#fff;
+    color:blue;
     box-shadow:2px 2px #1a6ea0;
     background: #4b7ea1;
     background: -webkit-gradient(linear, left top, left bottom, from(#81a8cb), to(#4477a1) );
     background: -moz-linear-gradient(-90deg, #81a8cb, #4477a1);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
-/*ボタンの押印時に稼働*/
-.submit_buttun:hover{
-    color:#fff;
-    background-color:#49a9d4;
+//ボタンの押印時に稼働
+.button:hover{
+    color:blue;
+    background-color:blue;
     box-shadow:2px 2px #1a6ea0;
     cursor: pointer;
     opacity:0.5;
@@ -30,12 +31,12 @@
     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
 }
-/*ボタンが有効時に稼働*/
-.submit_buttun:active{
-	background: #4477a1;
+//ボタンが有効時に稼働
+.button:active{
+	background: blue;
 }
-/*ボタン配置*/
-.submit_btn_box{
+//ボタン配置
+.button_box{
 	margin: 20px;
 	text-align: center;
 	clear: both;
@@ -73,105 +74,6 @@ header ul li {
     border-radius: 13px;
 
 }
-　
-/*入力フォーム*/
-
-table.vertical-list-table
-{
-	width: 90%;
-	border-collapse: separate;
-	border-spacing: 0;
-	text-align: left;
-	font-size: 1.4rem;
-	line-height: 1.5;
-	border-top: 1px solid #ccc;
-	border-left: 1px solid #ccc;
-}
-
-table.vertical-list-table th
-{
-	width: 25%;
-	padding: 10px;
-	font-weight: 400;
-	vertical-align: top;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	border-top: 1px solid #fff;
-	border-left: 1px solid #fff;
-	background: #005392;
-	color:#ffffff;
-}
-
-table.vertical-list-table td
-{
-	width: 75%;
-	padding: 10px;
-	vertical-align: top;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-}
-
-table.vertical-list-table td input
-{
-	width: 95%;
-	padding: 10px;
-	vertical-align: top;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-}
-
-table.vertical-list-table td input[type="radio"]
-{
-	width: 10%;
-	padding: 10px;
-	vertical-align: top;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-}
-
-table.vertical-list-table, th, td
-{
-	margin : 3%;
-	border-collapse: collapse;
-	border: 1px solid #ccc;
-	line-height: 1.5;
-}
-
-table.vertical-list-table-mini
-{
-	width: 100%;
-	border-collapse: separate;
-	border-spacing: 0;
-	text-align: left;
-	font-size: 1.0rem;
-	line-height: 1.5;
-	border-top: 1px solid #ccc;
-	border-left: 1px solid #ccc;
-}
-
-table.vertical-list-table-mini th
-{
-	width: 35%;
-	padding: 10px;
-	font-weight: 400;
-	vertical-align: middle;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	border-top: 1px solid #fff;
-	border-left: 1px solid #fff;
-	background: #005392;
-	color:#ffffff;
-}
-
-table.vertical-list-table-mini td
-{
-	width: 65%;
-	padding: 10px;
-	vertical-align: middle;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-}
-
 /* カート合計 */
 .totalPrice{
 	color: #575757;
@@ -180,92 +82,17 @@ table.vertical-list-table-mini td
 	text-align: right;
 }
 
-
 /* 完了メッセージ */
-.completemsgBox{
+.completeMsgBox{
 
-	background-color: pink;
-	border: 3px solid red;
+	background-color: #E6FFE6;
+	border: 3px solid #00552e;
 	padding: 60px 100px;
 	font-family: 'Vidaloka', serif;
 	text-align: center;
 	font-weight: bold;
-	color: red;
-	font-size: 50px;
-}
-table.vertical-list-table{
-	width:90%;
-	padding:10px;
-	font-weight:bold;
-	font-size:0.8em;
-	text-align:center;
-	vertical-align:top;
-	background-color:#005392;
-	color:#ffffff;
-}
-body
-{
-	margin:0;
-	padding:0;
-	background-image:url(images/photo.jpg);
-}
-
-h1
-{
-	padding:10px 0;
-	color:blue;
-	border-top:2px solid blue;
-	border-bottom:2px solid blue;
-	text-align:center;
-	margin:10px;
-	width:90%;
-	margin-left:50px;
-}
-
-.right
-{
-	margin:15px 50px;
-	width:px;
-	float:left;
-}
-
-
-.item-image-box-320
-{
-	width:350px;
-	height:350px;
-}
-
-.left
-{
-	float:left;
-	margin-top:10px;
-}
-
-
-.relatedProductListBox
-{
-	margin-top:35px;
-	margin-left:200px;
-}
-
-.recommend-box
-{
-	float:left;
-	width:33.3%;
-
-}
-
-.item-image-box-100
-{
-	height:100px;
-}
-h1
-{
-	border-bottom: 2px solid blue;
-	border-top: 2px solid blue;
-	text-align: center;
-	color: red;
+	color: #00552e;
+	font-size: 10px;
 }
 .productList
 {
@@ -284,8 +111,99 @@ h1
 {
 	width: 55%;
 }
-/*ロゴ画面*/
-.sitetitle{
+table.inputTable
+{
+	width: 90%;
+	border-collapse: separate;
+	border-spacing: 0;
+	text-align: left;
+	font-size: 1.4rem;
+	line-height: 1.5;
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+}
+
+table.inputTable th
+{
+	width: 25%;
+	padding: 10px;
+	font-weight: 400;
+	vertical-align: top;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #fff;
+	border-left: 1px solid #fff;
+	background: #005392;
+	color:#ffffff;
+}
+
+table.inputTable td
+{
+	width: 75%;
+	padding: 10px;
+	vertical-align: top;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+table.inputTable td input
+{
+	width: 95%;
+	padding: 10px;
+	vertical-align: top;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+table.inputTable, th, td
+{
+	margin : 3%;
+	border-collapse: collapse;
+	border: 1px solid #ccc;
+	line-height: 1.5;
+}
+
+table.inputTable-mini
+{
+	width: 100%;
+	border-collapse: separate;
+	border-spacing: 0;
+	text-align: left;
+	font-size: 1.0rem;
+	line-height: 1.5;
+	border-top: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+}
+
+table.inputTable-mini th
+{
+	width: 35%;
+	padding: 10px;
+	font-weight: 400;
+	vertical-align: middle;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #fff;
+	border-left: 1px solid #fff;
+	background: #005392;
+	color:#ffffff;
+}
+
+table.inputTable-mini td
+{
+	width: 65%;
+	padding: 10px;
+	vertical-align: middle;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+.relatedProductListBox
+{
+	margin-top:35px;
+	margin-left:200px;
+}
+.pageTitle{
 	 text-align:center;
 	 border-top: 2px solid blue;
 	 border-bottom: 2px solid blue;
@@ -293,7 +211,7 @@ h1
 	 font-family:;
 	 color:blue;
 }
-/*エラーメッセージ*/
+
 .errorMsgBox{
 	text-align:center;
 	background-color:pink;
