[update] jspのクラスを変更

--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 
-//ボタンのデザイン
+/* ボタンのデザイン */
 .button {
     padding: 0.5em 1em;
     text-decoration:none;
@@ -19,7 +19,7 @@
     background: -moz-linear-gradient(-90deg, #81a8cb, #4477a1);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
-//ボタンの押印時に稼働
+/* ボタンの押印時に稼働 */
 .button:hover{
     color:blue;
     background-color:blue;
@@ -31,11 +31,11 @@
     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
 }
-//ボタンが有効時に稼働
+/* ボタンが有効時に稼働 */
 .button:active{
 	background: blue;
 }
-//ボタン配置
+/* ボタン配置 */
 .button_box{
 	margin: 20px;
 	text-align: center;
