--- a/WebContent/css/notFoundMsg.css
+++ b/WebContent/css/notFoundMsg.css
@@ -1,5 +1,23 @@
 @CHARSET "UTF-8";
 
-errorMsgBox{
+.errorMsgBox{
+	text-align:center;
+	background-color:pink;
+	margin:5px;
+	padding: 15px;
+	border: 1px solid red;
+	font-family:;
+	font-size:10px;
+	color:red;
+}
+
+.notFoundMsgBox{
+	text-align:center;
 	background-color:lightblue;
+	margin:5px;
+	padding: 15px;
+	border: 1px solid blue;
+	font-family:;
+	font-size:10px;
+	color:blue;
 }
