--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -3,33 +3,45 @@
 
 /* ボタンのデザイン */
 .button {
-    padding: 0.5em 1em;
-    text-decoration:none;
-    border-radius:100px;
-    width:100px;
-	height : 35px;
 	margin-top : -5px;
 	margin-left : 6px;
-    font-size:10px;
-    text-align:center;
-    color:blue;
-    box-shadow:2px 2px #1a6ea0;
+    padding: 0.5em 1em;
+    box-sizing: border-box;
+
+    width: 100px;
+    max-width: 100%;
+	height : 35px;
+
+    font-size: 10px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+
+    border-radius: 100px;
+    box-shadow: 2px 2px #1a6ea0;
+
     background: #4b7ea1;
     background: -webkit-gradient(linear, left top, left bottom, from(#81a8cb), to(#4477a1) );
     background: -moz-linear-gradient(-90deg, #81a8cb, #4477a1);
-    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
+
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
 /* ボタンの押印時に稼働 */
 .button:hover{
-    color:blue;
-    background-color:blue;
-    box-shadow:2px 2px #1a6ea0;
+    color: blue;
+
     cursor: pointer;
-    opacity:0.5;
+    opacity: 0.5;
+
+    box-shadow: 2px 2px #1a6ea0;
+
+    background-color: blue;
     background: #81a8cb;
     background: -webkit-gradient(linear, left top, left bottom, from(#4477a1), to(#81a8cb) );
     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb);
-    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
+
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
+
 }
 /* ボタンが有効時に稼働 */
 .button:active{
@@ -46,22 +58,42 @@ body {
 }
 
 header {
+	padding: 15px;
+	margin: 0px;
+	width: 100%;
+    box-sizing: border-box;
+
     background-color: royalblue;
 }
 
 header ul {
+	margin: 0px;
+    padding: 0px;
+
     list-style: none;
-    display: inline-block;
-    padding: 4px;
+	width: 100%;
+	display: inline-block;
+	vertical-align: top;
+
 }
 
 header ul li {
     float: left;
-    margin: 5px;
-}
+    margin: 3px;
 
+    max-width: calc(100% / 8 - 6px);
+}
+.siteTitle {
+	color: white;
+	font-size: 1.2em;
+	font-weight: bold;
+}
 .categorySelect {
     padding: 2px 2px 5px 2px;
+    box-sizing: border-box;
+
+    width: 100%;
+	max-width: 150px;
 
     border: 1px solid gray;
     border-radius: 5px;
@@ -69,6 +101,10 @@ header ul li {
 
 .searchWordInput {
     padding: 5px 10px;
+    box-sizing: border-box;
+
+    width: 100%;
+	max-width: 150px;
 
     border: 1px solid cyan;
     border-radius: 13px;
