[fix]yellow.css追加　settlementConfirm修正

--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -309,6 +309,18 @@ table.inputTable-mini, th, td
 	width:85%;
 	margin-top:40px;
 }
+.infoMsgBox{
+	text-align:center;
+	background-color:lightblue;
+	margin:auto;
+	padding: 15px;
+	border: 1px solid blue;
+	font-family:;
+	font-size:10px;
+	color:blue;
+	width:85%;
+	margin-top:40px;
+}
 .userIdCheckBox{
 	color:gray;
 	margin-left:20px;
