--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+body{
+	background: background: -moz-linear-gradient(top, white, #FFFFDD);
+  background: -webkit-linear-gradient(top, white, #FFFFDD);
+  background: linear-gradient(to bottom, white, #FFFFDD);
+}
+
+
 /* ボタンのデザイン */
 .button {
 	margin-top : -5px;
@@ -19,9 +26,9 @@
     border-radius: 100px;
     box-shadow: 2px 2px #1a6ea0;
 
-    background: #4b7ea1;
-    background: -webkit-gradient(linear, left top, left bottom, from(#81a8cb), to(#4477a1) );
-    background: -moz-linear-gradient(-90deg, #81a8cb, #4477a1);
+    background: #333333;
+    background: -webkit-gradient(linear, left top, left bottom, from(), to() );
+    background: -moz-linear-gradient();
 
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
 }
@@ -65,7 +72,7 @@ header {
 	width: 100%;
     box-sizing: border-box;
 
-    background-color: royalblue;
+    background-color: #FFCC33;
 }
 
 header ul {
@@ -86,9 +93,11 @@ header ul li {
     max-width: calc(100% / 8 - 6px);
 }
 .siteTitle {
-	color: white;
-	font-size: 1.2em;
+	color: red;
+	text-shadow:2px 2px 0px white;
+	font-size: 1.5em;
 	font-weight: bold;
+	font-family:'impact';
 }
 .categorySelect {
     padding: 2px 2px 5px 2px;
@@ -108,7 +117,7 @@ header ul li {
     width: 100%;
 	max-width: 150px;
 
-    border: 1px solid cyan;
+    border: 1px solid gray;
     border-radius: 13px;
 
 }
@@ -176,8 +185,8 @@ table.inputTable th
 	border-top: 1px solid #fff;
 	border-left: 1px solid #fff;
 
-	background: #005392;
-	color:#ffffff;
+	background: #FFCC33;
+	color:#333333;
 }
 
 table.inputTable td
@@ -263,14 +272,16 @@ table.inputTable-mini, th, td
 
 .pageTitle{
 	 text-align:center;
+	 font-family:'arial black'';
 
 	 margin: 20px 30px;
 	 padding:5px;
 
 	 border-top: 2px solid blue;
 	 border-bottom: 2px solid blue;
+	 border-color:navy;
 
-	 color:blue;
+	 color:red;
 }
 
 /* メッセージボックス */
