--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -4,7 +4,7 @@ body{
 	background: background: -moz-linear-gradient(top, white, #FFFFDD);
   background: -webkit-linear-gradient(top, white, #FFFFDD);
   background: linear-gradient(to bottom, white, #FFFFDD);
-  height:100vh;
+  min-height:100vh;
 }
 
 
@@ -153,12 +153,22 @@ header ul li {
 }
 .productList li img
 {
+	margin: 4px auto;
 	width: 55%;
 
-	margin: 0 auto;
 	padding: 0;
 	display: block;
 	vertical-align: bottom;
+	transition: all 200ms ease;
+
+}
+.productList li img:hover
+{
+	margin-top: 0px;
+	margin-bottom: 0px;
+
+	width: calc(55% + 8px);
+	filter: drop-shadow(0px 0px 20px rgb(200, 200, 5));
 }
 
 table.inputTable
