--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -283,7 +283,7 @@ table.inputTable-mini, th, td
 
 .pageTitle{
 	 text-align:center;
-	 font-family:'arial black'';
+	 font-family:'arial black';
 
 	 margin: 20px 30px;
 	 padding:5px;
