--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -13,7 +13,7 @@ body{
 	margin-top : -5px;
 	margin-left : 6px;
     padding: 0.5em 1em;
-    box-sizing: border-box;
+    box-sizing:;
 
     width: 100px;
     max-width: 100%;
@@ -25,34 +25,34 @@ body{
     text-decoration: none;
 
     border-radius: 100px;
-    box-shadow: 2px 2px #1a6ea0;
+    box-shadow: 2px 2px;
 
     background: #333333;
-    background: -webkit-gradient(linear, left top, left bottom, from(), to() );
-    background: -moz-linear-gradient();
+/*     background: -webkit-gradient(linear, left top, left bottom, from(), to() ); */
+/*     background: -moz-linear-gradient(); */
 
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1');
+/*     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#81a8cb', endColorstr='#4477a1'); */
 }
 /* ボタンの押印時に稼働 */
 .button:hover{
-    color: blue;
+    color: ;
 
     cursor: pointer;
-    opacity: 0.5;
+    opacity: ;
 
-    box-shadow: 2px 2px #1a6ea0;
+    box-shadow: 2px 2px ;
+	transition: all 0.3s ease-in;
+    background-color:silver;
+/*     background: #81a8cb; */
+/*     background: -webkit-gradient(linear, left top, left bottom, from(#4477a1), to(#81a8cb) ); */
+/*     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb); */
 
-    background-color: blue;
-    background: #81a8cb;
-    background: -webkit-gradient(linear, left top, left bottom, from(#4477a1), to(#81a8cb) );
-    background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb);
-
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb');
+/*     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4477a1', endColorstr='#81a8cb'); */
 
 }
 /* ボタンが有効時に稼働 */
 .button:active{
-	background: blue;
+	background: ;
 }
 .button:disabled{
 	opacity: 0.5;
@@ -128,6 +128,7 @@ header ul li {
 	color: #575757;
 	font-size: 1.4em;
 	text-align: right;
+	font-weight:bold;
 }
 
 .productList
@@ -314,7 +315,7 @@ table.inputTable-mini, th, td
 
 .pageTitle{
 	 text-align:center;
-	 font-family:'arial black';
+	 font-family:  Meiryo, sans-serif;
 
 	 margin: 20px 30px;
 	 padding:5px;
@@ -404,4 +405,18 @@ table.inputTable-mini, th, td
 	margin: 0 auto;
 	max-width: 200px;
 	width: 100%;
+}
+
+.id{
+	color: red;
+	letter-spacing:;
+	font-size: 25px;
+	font-weight: bold;
+	font-family:Helvetica;
+}
+
+span{
+	color: red;
+	font-weight: bold;
+	font-family:Verdana;
 }
