--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -27,7 +27,7 @@ body{
     border-radius: 100px;
     box-shadow: 2px 2px;
 
-    background: #333333;
+    background: #ff9933;
 /*     background: -webkit-gradient(linear, left top, left bottom, from(), to() ); */
 /*     background: -moz-linear-gradient(); */
 
@@ -42,7 +42,7 @@ body{
 
     box-shadow: 2px 2px ;
 	transition: all 0.3s ease-in;
-    background-color:silver;
+    background-color: #6c272d;
 /*     background: #81a8cb; */
 /*     background: -webkit-gradient(linear, left top, left bottom, from(#4477a1), to(#81a8cb) ); */
 /*     background: -moz-linear-gradient(-90deg, #4477a1, #81a8cb); */
@@ -52,7 +52,7 @@ body{
 }
 /* ボタンが有効時に稼働 */
 .button:active{
-	background: ;
+	background: #6c272d;
 }
 .button:disabled{
 	opacity: 0.5;
