--- a/WebContent/css/yellow.css
+++ b/WebContent/css/yellow.css
@@ -239,6 +239,7 @@ table.inputTable td input[type="text"],
 table.inputTable td input[type="password"]
 {
 	width: 100%;
+	height: 40px;
 	box-sizing:border-box;
 	padding: 0.3em;
 	transition: 0.3s;
